<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Icaro</string>
    <string name="hello_world">!!!</string>
    <string name="action_settings">Settings</string>
    <string name="choose_station">scegli una stazione</string>
    <string name="title_activity_buy_tickets">compra biglietto</string>
    <string name="oneway_label">sola andata</string>
    <string name="return_label">andata e ritorno</string>
    <string name="title_activity_my_travels">i miei viaggi</string>
    <string name="multi_partenza">partenza</string>
    <string name="multi_arrivo">arrivo</string>
    <string name="travel_type">tipo di viaggio</string>
    <string name="travel_date">data di partenza</string>
    <string name="travel_date2">data di ritorno</string>
    <string name="date_hint">../../....</string>
    <string name="set">set</string>
    <string name="empty">empty</string>
    <string name="hour">ora di partenza</string>
    <string name="dialog_title">errore inserimento data</string>
    <string name="dialog_message">la data scelta non può essere precedente alla data odierna.</string>
    <string name="dialog_message2">la data di ritorno non uò essere precedente a quella di andata.</string>
    <string name="hour2">ora di ritorno</string>
    <string name="passengers">passeggeri</string>
    <string name="search_button">cerca treni</string>
    <string name="partenza">partenza</string>
    <string name="destinations">stazioni</string>
    <string name="ritorno">ritorno</string>
    <string name="arrivo">arrivo</string>
    <string name="news">news</string>
    <string name="login">login</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_map">Map</string>
    <string name="map">mappa</string>
    <string name="title_activity_train_results">Train Results</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_confirmation">Confirmation</string>

</resources>
