 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background" >
        
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="35dp"
    android:layout_marginRight="35dp"
    android:layout_marginTop="35dp"
    android:orientation="vertical" >

    <Button
        android:id="@+id/loginButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:onClick="gotoLogin"
        android:text="@string/login" />
    
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:onClick="logout"
        android:text="@string/logout" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:onClick="gotoSearch"
        android:text="@string/title_activity_buy_tickets" />

    <Button
        android:id="@+id/myTravelsButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:onClick="gotoTravels"
        android:text="@string/title_activity_my_travels" />

    <Button
        android:id="@+id/newsButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:alpha="1"
        android:onClick="gotoNews"
        android:text="@string/news" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:onClick="gotoMap"
        android:text="@string/map" />

</LinearLayout>

 </RelativeLayout>