<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/travel_type" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/onewayRadio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="noReturn"
            android:text="@string/oneway_label" />

        <RadioButton
            android:id="@+id/returnRadio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="yesReturn"
            android:text="@string/return_label" />

    </RadioGroup>

    <TextView
        android:id="@+id/destinations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/destinations" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:weightSum="2">
        
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/travel_date"
            android:layout_weight="3" />

        <Button
            android:id="@+id/setButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/set"
            android:layout_weight="2"  />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:ems="10"
            android:gravity="center|fill"
            android:hint="@string/date_hint"
            android:inputType="date" >

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hour" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/passengers" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2" >

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1" />
        	<!-- android:onClick="showTimePickerDialog" -->
           

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutReturn"
        android:weightSum="10" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/travel_date2"
            android:layout_weight="3" />

        <Button
            android:id="@+id/setButton2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/set"
            android:layout_weight="2"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:ems="10"
            android:gravity="center|fill"
            android:hint="@string/date_hint"
            android:inputType="date" >

        </EditText>

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hour2" />
    
    <LinearLayout
        android:id="@+id/layoutReturn02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2" >

        <Spinner
            android:id="@+id/spinner5"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="1" />
            <!-- android:onClick="showTimePickerDialog" -->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="gotoTrainResults"
            android:text="@string/search_button" />

    </LinearLayout>

</LinearLayout>